fix(css & js) visiblity

--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -1,18 +1,19 @@
 .logoImg{
-    width:90px;
-    height:70px;
+    width:80px;
+    height:60px;
     object-fit: cover;
     margin-right: 20px;
     border: 1px solid white;
 }
 .footer{
+  //border: 1px solid white;
     display: flex;
-    font-size:12px;
+    font-size:10px;
     color:white;
     //outline:1px solid white;
     justify-content:flex-end;
   padding-right:20px;
-  margin-top:25px;
+  margin-top:40px;
   }
 
   .containerSignature{
